chore: expose createUser api and format api return data
